<resources>
    <string name="app_name">GPS Hub</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--    Generic Words   -->
    <string name="generic_accept">Aceitar</string>
    <string name="generic_attention">Atenção</string>
    <string name="generic_active">Ativado</string>
    <string name="generic_disable">Desativado</string>
    <string name="generic_permission">Permissão</string>
    <string name="generic_cancel">Cancelar</string>
    <string name="generic_ok">OK</string>
    <string name="generic_unlock">Desbloquear</string>
    <string name="generic_insert_password">Insira a senha</string>


    <!--    Default messages    -->
    <string name="permission_granted_message">Permissões concedidas, obrigado!</string>
    <string name="permission_require_message">Necessário aceitar todas permissões para o funcionamento do App.</string>
    <string name="permission_package_usage_stats_require_message">Ative o \"Acesso de uso\" para o aplicativo GPS Hub nas configurações.</string>


    <!--    MainActivity    -->
    <string name="menu_title_data">Dados</string>
    <string name="menu_title_session">Sessão</string>
    <string name="menu_apps">Apps</string>
    <string name="menu_clear_cache">Limpar Cache</string>
    <string name="menu_exit">Sair</string>
    <string name="menu_settings">Configurações</string>
    <string name="menu_sync">Sincronizar</string>


    <!--    LockActivity    -->
    <string name="description_lock_message">Esse aplicativo necessita de permissão para ser utilizado.\nPara continuar entre com a senha de acesso.</string>


    <!--    AppsFragment   -->
    <string name="title_fragment_apps">Aplicativos</string>
    <string name="action_filter_apps">Filtrar Apps</string>
    <string name="block_icon_description">Bloquear/Desbloquear Apps</string>
    <string name="favourite_icon_description">Favoritar App</string>

    <!--    RondaFragment   -->
    <string name="title_fragment_ronda">Rondas</string>
    <string name="invalid_password_message">Senha inválida. Você tem mais %1$d tentativa(s)</string>


    <!--    SettingsFragment    -->
    <string name="id_admin">admin</string>
    <string name="id_theme">theme</string>
    <string name="id_lock">lockState</string>
    <string name="id_block_with_screen">lockAutoScreen</string>
    <string name="id_block_time">lockAutoScreenTime</string>
    <string name="id_block_time_value">lockAutoScreenTimeValue</string>

    <string name="title_interface_settings">Visualização</string>
    <string name="title_lock_settings">Bloqueio</string>
    <string name="title_lock_app_settings">Bloqueio de Apps</string>
    <string name="title_block_app_when_lock_phone_settings">Bloquear app quando a tela é bloqueada</string>
    <string name="title_time_to_block_settings">Tempo para bloqueio automático</string>
    <string name="title_day_night_mode">Tema do aplicativo</string>
    <string name="title_lock_mode">Bloquear</string>
    <string name="subtitle_day_mode">Claro</string>
    <string name="subtitle_night_mode">Escuro</string>
    <string name="subtitle_active_mode">Ativado</string>
    <string name="subtitle_inactive_mode">Desativado</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>