<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/homeFragment">

    <!--    app:enterAnim       Animacao do fragmento entrando   -->
    <!--    app:exitAnim        Animacao do fragmento saindo   -->
    <!--    app:popEnterAnim    Animacao do fragmento voltando   -->
    <!--    app:popExitAnim     Animacao do fragmento sumindo   -->


    <fragment
        android:id="@+id/homeFragment"
        android:name="br.com.gps.gpshub.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_settingFragment"
            app:destination="@id/settingFragment"
            app:enterAnim="@anim/nav_enter_anim"
            app:popExitAnim="@anim/nav_pop_exit_anim" />
        <action
            android:id="@+id/action_homeFragment_to_rondaFragment"
            app:destination="@id/rondaFragment"
            app:enterAnim="@anim/nav_enter_anim"
            app:exitAnim="@anim/stationary"
            app:popEnterAnim="@anim/stationary"
            app:popExitAnim="@anim/nav_pop_exit_anim" />
        <action
            android:id="@+id/action_homeFragment_to_appsFragment"
            app:destination="@id/appsFragment"
            app:enterAnim="@anim/nav_enter_anim"
            app:exitAnim="@anim/stationary"
            app:popEnterAnim="@anim/stationary"
            app:popExitAnim="@anim/nav_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/settingFragment"
        android:name="br.com.gps.gpshub.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settingFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>

    <fragment
        android:id="@+id/rondaFragment"
        android:name="br.com.gps.gpshub.ui.ronda.RondaFragment"
        android:label="@string/title_fragment_ronda"
        tools:layout="@layout/fragment_ronda">
        <action
            android:id="@+id/action_rondaFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>

    <fragment
        android:id="@+id/appsFragment"
        android:name="br.com.gps.gpshub.ui.apps.AppsFragment"
        android:label="@string/title_fragment_apps"
        tools:layout="@layout/fragment_apps">
        <action
            android:id="@+id/action_appsFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>


</navigation>