<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        tools:context=".ui.UnlockActivity">


        <ImageView
            android:id="@+id/icon_app_image_view"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:importantForAccessibility="no"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintBottom_toTopOf="@+id/passaword_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_app_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon_app_image_view"
            tools:text="App Name" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passaword_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passaword_text_view"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:focusable="true"
                android:focusedByDefault="true"
                android:gravity="center"
                android:hint="@string/generic_insert_password"
                android:inputType="numberPassword"
                android:maxLength="10"
                android:maxLines="1"
                android:textSize="18sp"
                tools:ignore="UnusedAttribute" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/unlock_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/generic_unlock"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passaword_layout" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:text="@string/description_lock_message"
            android:textColor="@color/orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/unlock_button" />


        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:importantForAccessibility="no"
            android:src="@mipmap/ic_launcher_round"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>